Task | set model in view | Heder Romero

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,8 +18,7 @@
             app:ime_options="actionNext"
             app:input_type="email"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <com.example.briix.customcomponentlayout.widget.CustomView
             android:id="@+id/edit_cellphone"
